<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Customer"
    android:id="@+id/login"
    android:background="@drawable/capsules">



    <EditText
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:id="@+id/medicine"
        android:layout_marginLeft="10dp"
        android:background="@drawable/search"
        android:layout_weight=".75"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="FIND THE GENERIC MEDICINE"
        android:id="@+id/textView8"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Enter the name of the medicine"
        android:id="@+id/textView9"
        android:layout_alignBottom="@+id/medicine"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:background="@drawable/mybutton"

        android:id="@+id/button8"
        android:layout_below="@+id/medicine"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:onClick="searchgen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/m1"
        android:id="@+id/textView14"
        android:layout_alignTop="@+id/textView15"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/m2"
        android:id="@+id/textView15"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/m3"
        android:id="@+id/textView16"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true"
        android:layout_marginTop="59dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/m4"
        android:id="@+id/textView17"
        android:layout_alignTop="@+id/textView16"
        android:layout_alignStart="@+id/textView15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/m5"
        android:id="@+id/m1"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/m6"
        android:id="@+id/m2"
        android:layout_below="@+id/textView15"
        android:layout_alignStart="@+id/textView15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/m7"
        android:id="@+id/m3"
        android:layout_below="@+id/textView16"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/m8"
        android:id="@+id/m4"
        android:layout_below="@+id/textView17"
        android:layout_alignStart="@+id/textView17" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WHERe to buy? click here"
        android:id="@+id/button3"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:background="@drawable/mybutton"
        android:onClick="showStore"
        android:layout_below="@+id/m3"
        android:layout_toEndOf="@+id/textView14"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Company info"
        android:id="@+id/button6"
        android:layout_alignTop="@+id/button8"
        android:layout_alignStart="@+id/textView15"
        android:onClick="search_comp" />

</RelativeLayout>