<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UploadStore"
    android:id="@+id/uploadstore"
    android:background="@drawable/store">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/azs"
        android:id="@+id/textView9"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sfgsfasfsfffasfsf"
        android:id="@+id/textView11"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/gname"
        android:background="@drawable/search"
        android:layout_weight=".75"
        android:layout_below="@+id/textView11"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sadfgafsgasfgs"
        android:id="@+id/textView20"

        android:layout_below="@+id/gname" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/shop"
        android:background="@drawable/search"
        android:layout_weight=".75"
        android:layout_below="@+id/textView20"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/arfsgebg"
        android:id="@+id/textView2"
        android:layout_below="@+id/shop"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/loc"
        android:background="@drawable/search"
        android:layout_weight=".75"

        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/adf"
        android:id="@+id/textView7"
        android:layout_below="@+id/loc"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/avail"
        android:background="@drawable/search"
        android:layout_weight=".75"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asdd"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:background="@drawable/mybutton"
        android:id="@+id/button"
        android:layout_below="@+id/avail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:onClick="uploadshop" />

</RelativeLayout>